# patto-mobile

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  renderer.rs
src-tauri/src/commands/: files.rs  git.rs  mod.rs  notes.rs  tasks.rs
src/components/: FileList.css  FileList.jsx  GitConfig.css  GitConfig.jsx  NoteEditor.css  NoteEditor.jsx  NoteView.css  NoteView.jsx  TaskPanel.css  TaskPanel.jsx
src/lib/: constants.js  noteHooks.js  store.js  viewHooks.js
