[package]
name = "patto-mobile"
version = "0.1.0"
description = "Patto Note Mobile App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "patto_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Patto core library (for parser, renderer, repository)
patto = { path = "../.." }

# Git operations (vendored-openssl for Android cross-compilation)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Chrono for date handling
chrono = { version = "0.4", features = ["serde"] }
